--- a/pages/17988.html
+++ b/pages/17988.html
@@ -456,7 +456,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincaré Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
 </ul>
 </li>
 
@@ -708,14 +708,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 23, 2017 03:00:20 
+  Revised on January  4, 2018 04:14:42 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.45.5.227)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/asymptotic+safety" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/asymptotic+safety/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/asymptotic+safety" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/asymptotic+safety" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/asymptotic+safety" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/asymptotic+safety/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/asymptotic+safety" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/asymptotic+safety" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
