--- a/pages/4276.html
+++ b/pages/4276.html
@@ -388,7 +388,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/microcausal+observable'>microcausal observables</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+polynomial+observable'>microcausal observables</a></p>
 </li>
 
 <li>
@@ -498,7 +498,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
 </li>
 
 <li>
@@ -513,6 +513,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
 </li>
 
 <li>
@@ -650,14 +654,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2018 02:13:03 
+  Revised on January  4, 2018 05:34:40 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
