--- a/pages/9246.html
+++ b/pages/9246.html
@@ -1056,19 +1056,43 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In the context of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>, a <em>renormalization scheme</em> is a method in <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> of <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>local Lagrangian</a> theory for systematically producing <a class='existingWikiWord' href='/nlab/show/counterterm'>counterterms</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, for a suitable <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> to perturb around, given an <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> then the <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> of the corresponding <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> (i.e. the choice of its <a class='existingWikiWord' href='/nlab/show/S-matrix'>perturbative S-matrix</a>) is in each order <math class='maruku-mathml' display='inline' id='mathml_27c9ee49c0f34f643361678d67a7c4669d8b6e3d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ω</mi><mo>∈</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\omega \in \mathbb{Z}</annotation></semantics></math> a choice from an <a class='existingWikiWord' href='/nlab/show/affine+space'>affine space</a> of renormalization parameters. A <em>renormalization scheme</em> is a way to pick for all interaction Lagrangians at once an origin in these affine spaces, making them <a class='existingWikiWord' href='/nlab/show/finite-dimensional+vector+space'>finite dimensional vector spaces</a> relative to this choice.</p>
 
-<p>A choice of renormalization scheme amounts to a choice of decomposition, as <a class='existingWikiWord' href='/nlab/show/vector+space'>vector spaces</a> of <math class='maruku-mathml' display='inline' id='mathml_73355776e21497e8dd29765e950e9ebe3dccf3a4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>C^\infty((0,\infty))</annotation></semantics></math> as a <a class='existingWikiWord' href='/nlab/show/direct+sum'>direct sum</a> <math class='maruku-mathml' display='inline' id='mathml_73355776e21497e8dd29765e950e9ebe3dccf3a4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo>⊕</mo><mi>Sing</mi></mrow><annotation encoding='application/x-tex'>C^\infty([0,\infty)) \oplus Sing</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_73355776e21497e8dd29765e950e9ebe3dccf3a4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sing</mi></mrow><annotation encoding='application/x-tex'>Sing</annotation></semantics></math> is a space of functions that are singular at 0.</p>
+<p>Concretely, in <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> is understood as the choice of <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a> of the <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>Feynman amplitudes</a> (which are <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>products of distributions</a>, along <a class='existingWikiWord' href='/nlab/show/edge'>edges</a> of <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a>, of <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagators</a> with the <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian densities</a>) to the <a class='existingWikiWord' href='/nlab/show/diagonal+morphism'>diagonal</a> where the interaction points coincide. For translation-invariant theories this amounts, locally, to <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a> from the <a class='existingWikiWord' href='/nlab/show/complement'>complement</a> <math class='maruku-mathml' display='inline' id='mathml_27c9ee49c0f34f643361678d67a7c4669d8b6e3d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>∖</mo><mo stretchy='false'>{</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \setminus \{0\}</annotation></semantics></math> of the origin in some (high-dimensional) <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> to the full space. For given <a class='existingWikiWord' href='/nlab/show/scaling+degree+of+a+distribution'>scaling degree of a distribution</a> <math class='maruku-mathml' display='inline' id='mathml_27c9ee49c0f34f643361678d67a7c4669d8b6e3d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ω</mi></mrow><annotation encoding='application/x-tex'>\omega</annotation></semantics></math>, the space of such extensions is an <a class='existingWikiWord' href='/nlab/show/affine+space'>affine space</a> modeled on the <a class='existingWikiWord' href='/nlab/show/finite-dimensional+vector+space'>finite dimensional vector space</a> of <a class='existingWikiWord' href='/nlab/show/point-supported+distribution'>point-supported distributions</a> at the origin of degree <math class='maruku-mathml' display='inline' id='mathml_27c9ee49c0f34f643361678d67a7c4669d8b6e3d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≤</mo><mi>ω</mi></mrow><annotation encoding='application/x-tex'>\leq \omega</annotation></semantics></math>.</p>
+
+<p>A choice of such extensions for all distributions at once is naturally fixed by a choice of <a class='existingWikiWord' href='/nlab/show/projection'>projection</a> from the space of all <a class='existingWikiWord' href='/nlab/show/bump+function'>bump functions</a> on <math class='maruku-mathml' display='inline' id='mathml_27c9ee49c0f34f643361678d67a7c4669d8b6e3d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> to the subspace of those all whose <a class='existingWikiWord' href='/nlab/show/partial+differentiation'>partial derivatives</a> to order <math class='maruku-mathml' display='inline' id='mathml_27c9ee49c0f34f643361678d67a7c4669d8b6e3d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ω</mi></mrow><annotation encoding='application/x-tex'>\omega</annotation></semantics></math> vanish at the origin (<a href='#BrunettiFredenhagen00'>Brunetti-Fredenhagen 00, p. 24-25</a>, following <a href='#EpsteinGlaser73'>Epstein-Glaser 73, p. 27-28 (236-237)</a>).</p>
+
+<p>Such a choice hence amounts to a <em>renormalization scheme</em>.</p>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a> states that any two choices of renormalization schemes differ by a unique re-definition of the <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> by an element in the <a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a>.</p>
 
 <h2 id='references'>References</h2>
 
-<p>For instance def. 1.4.1, def. 8.0.2 in</p>
+<p>Discussion in <a class='existingWikiWord' href='/nlab/show/relativistic+quantum+field+theory'>relativistic field theory</a> via <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is due to</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Kevin+Costello'>Kevin Costello</a>, <em>Renormalisation and the Batalin-Vilkovisky formalism</em> (<a href='http://arxiv.org/abs/0706.1533'>arXiv:0706.1533</a>)</li>
+<li id='EpsteinGlaser73'>
+<p><a class='existingWikiWord' href='/nlab/show/Henri+Epstein'>Henri Epstein</a> and <a class='existingWikiWord' href='/nlab/show/Vladimir+Glaser'>Vladimir Glaser</a>, section 5 of <em><a class='existingWikiWord' href='/nlab/show/The+role+of+locality+in+perturbation+theory'>The role of locality in perturbation theory</a></em>, Annales Poincaré Phys. Theor. A 19 (1973) 211 (<a href='http://www.numdam.org/item?id=AIHPA_1973__19_3_211_0'>Numdam</a>)</p>
+</li>
+
+<li id='BrunettiFredenhagen00'>
+<p><a class='existingWikiWord' href='/nlab/show/Romeo+Brunetti'>Romeo Brunetti</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, section 5.2 of <em>Microlocal analysis and interacting quantum field theories: Renormalization on Physical Backgrounds</em>, Commun. Math. Phys. 208 : 623-661, 2000 (<a href='https://arxiv.org/abs/math-ph/9903028'>math-ph/9903028</a>)</p>
+</li>
 </ul>
 
-<p>Discussion of dependence of quantities on choice of renormalization scheme includes</p>
+<p>Review is in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Fr%C3%A9d%C3%A9ric+Paugam'>Frédéric Paugam</a>, section 20.6 of <em>Towards the mathematics of quantum field theory</em>, Springer 2014 (<a href='https://webusers.imj-prg.fr/~frederic.paugam/documents/enseignement/master-mathematical-physics.pdf'>pdf</a>)</li>
+</ul>
+
+<p>Discussion in <a class='existingWikiWord' href='/nlab/show/Euclidean+field+theory'>Euclidean field theory</a> is in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Kevin+Costello'>Kevin Costello</a>, def. 1.4.1, def. 8.0.2 <em>Renormalisation and the Batalin-Vilkovisky formalism</em> (<a href='http://arxiv.org/abs/0706.1533'>arXiv:0706.1533</a>)</li>
+</ul>
+
+<p>Further discussion of dependence of quantities on choice of renormalization scheme includes</p>
 
 <ul>
 <li>
@@ -1085,14 +1109,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  4, 2015 21:41:35 
+  Revised on January  4, 2018 05:57:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (127.0.0.1)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/renormalization+scheme" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/renormalization+scheme/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/renormalization+scheme" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/renormalization+scheme" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/renormalization+scheme" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/renormalization+scheme/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/renormalization+scheme" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/renormalization+scheme" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
