--- a/pages/16524.html
+++ b/pages/16524.html
@@ -318,30 +318,24 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/schreiber/show/thesis+Schlegel' title='schreiber'>thesis Schlegel</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_611e7ca8bc1867fa85d7b02b6f772aefb0aceb88_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_867090acb31f421667e01178af64c3dedf4f21df_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Cahiers+topos'>Cahiers topos</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/manifold+with+boundary'>manifold with boundary</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/rational+parameterized+stable+homotopy+theory'>rational parameterized stable homotopy theory</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on August 26, 2017 13:32:57 
+  Revised on January  4, 2018 06:54:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.75.2)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Vincent+Schlegel" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Vincent+Schlegel/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Vincent+Schlegel" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Vincent+Schlegel" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Vincent+Schlegel" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Vincent+Schlegel/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Vincent+Schlegel" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Vincent+Schlegel" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
