--- a/pages/5295.html
+++ b/pages/5295.html
@@ -824,7 +824,7 @@ margin-left: 0em;
 
 <p>The second main philosophical idea is that the mind works over time. One does not have everything ready and done from the start. Infinity is a (perceived) idealized property of time, but one cannot have completed any infinite process or construction on any given day. Infinity is potential, not actual.</p>
 
-<p>The main mathematical idea then becomes that we can only build mathematical structures and truths starting from the natural numbers <math class='maruku-mathml' display='inline' id='mathml_087cd5cebd164b38c90d6740aa19d686abf1892a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>,</mo><mn>1</mn><mo>,</mo><mo>.</mo><mo>.</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'>0, 1, ...</annotation></semantics></math> (where the dots indicate potential, not actual infinity). Natural numbers are definite and precise, but most real numbers, such as <math class='maruku-mathml' display='inline' id='mathml_087cd5cebd164b38c90d6740aa19d686abf1892a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi></mrow><annotation encoding='application/x-tex'>\pi</annotation></semantics></math>, have a very different nature. We can only form something that we call ‘<math class='maruku-mathml' display='inline' id='mathml_087cd5cebd164b38c90d6740aa19d686abf1892a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi></mrow><annotation encoding='application/x-tex'>\pi</annotation></semantics></math>’ through a never-finished process of approximation.</p>
+<p>The main mathematical idea then becomes that we can only build mathematical structures and truths starting from the natural numbers <math class='maruku-mathml' display='inline' id='mathml_c06063c13cdf50c4d6758eb172640dc8af27f8ab_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>,</mo><mn>1</mn><mo>,</mo><mo>.</mo><mo>.</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'>0, 1, ...</annotation></semantics></math> (where the dots indicate potential, not actual infinity). Natural numbers are definite and precise, but most real numbers, such as <math class='maruku-mathml' display='inline' id='mathml_c06063c13cdf50c4d6758eb172640dc8af27f8ab_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi></mrow><annotation encoding='application/x-tex'>\pi</annotation></semantics></math>, have a very different nature. We can only form something that we call ‘<math class='maruku-mathml' display='inline' id='mathml_c06063c13cdf50c4d6758eb172640dc8af27f8ab_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi></mrow><annotation encoding='application/x-tex'>\pi</annotation></semantics></math>’ through a never-finished process of approximation.</p>
 
 <p>Nonetheless, a substantial part of mathematics can be built up (‘constructed’) in this way. What mainly differentiates intuitionistic mathematics from <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a> are two added axioms.</p>
 
@@ -866,7 +866,7 @@ margin-left: 0em;
 
 <h2 id='mathematical_principles'>Mathematical principles</h2>
 
-<p>Brouwer did not believe in a rigourous formalization of mathematics, for various reasons (amongst which the mathematical incompleteness of formal systems, as later proved by Gödel). He saw mathematical logic and formal systems as a correct part of mathematics, but held that this part could capture the essence nor the scope of mathematics in a meaningful way. Nonetheless he admitted that certain often-used arguments and mental constructions could be formalized `as an abbreviation&#39;.</p>
+<p>Brouwer did not believe in a rigourous formalization of mathematics, for various reasons (amongst which the mathematical incompleteness of formal systems, as later proved by <a class='existingWikiWord' href='/nlab/show/incompleteness+theorem'>Gödel&#39;s incompleteness theorem</a>). He saw mathematical logic and formal systems as a correct part of mathematics, but held that this part could capture the essence nor the scope of mathematics in a meaningful way. Nonetheless he admitted that certain often-used arguments and mental constructions could be formalized `as an abbreviation&#39;.</p>
 
 <p>Brouwer’s student Arend Heyting (who later succeeded Brouwer as professor in Amsterdam) formalized what is now known as <a class='existingWikiWord' href='/nlab/show/intuitionistic+logic'>intuitionistic logic</a>. He also is largely responsible for the <a class='existingWikiWord' href='/nlab/show/Brouwer-Heyting-Kolmogorov+interpretation'>Brouwer-Heyting-Kolmogorov interpretation</a> (BHK) of intuitionistic logic, BHK can be seen as a precursor to realizability.</p>
 
@@ -893,6 +893,8 @@ margin-left: 0em;
 </ul>
 
 <p>Although it&#39;s not enough to derive all of the above, much of the essence of intuitionistic mathematics, or at least intuitionistic <a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a>, can be summarized in the theorem that every (set-theoretic) <a class='existingWikiWord' href='/nlab/show/function'>function</a> from the <a class='existingWikiWord' href='/nlab/show/interval'>unit interval</a> to the <a class='existingWikiWord' href='/nlab/show/real+number'>real line</a> is <a class='existingWikiWord' href='/nlab/show/uniformly+continuous+map'>uniformly continuous</a>.</p>
+
+<p>Intuitionistic mathematics is often regarded as a specialization of <a class='existingWikiWord' href='/nlab/show/Bishop%27s+constructive+mathematics'>Bishop&#39;s constructive mathematics</a> obtained by adding the above principles, but this is somewhat questionable if it refers to what Bishop actually did (and in particular the fact that he worked with <a class='existingWikiWord' href='/nlab/show/Bishop+set'>Bishop sets</a>); see <a class='existingWikiWord' href='/nlab/show/Bishop%27s+constructive+mathematics'>Bishop&#39;s constructive mathematics</a> for discussion.</p>
 
 <h2 id='feel'>Feel</h2>
 
@@ -976,14 +978,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 15, 2017 05:43:46 
-  by <a class="existingWikiWord" href="/nlab/show/Frank+Waaldijk">Frank Waaldijk</a>
-  (213.46.140.142)
+  Revised on January  5, 2018 13:34:59 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (178.9.120.196)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/intuitionistic+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intuitionistic+mathematics/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/intuitionistic+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intuitionistic+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/intuitionistic+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intuitionistic+mathematics/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/intuitionistic+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intuitionistic+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
