--- a/pages/10374.html
+++ b/pages/10374.html
@@ -668,7 +668,7 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> a <em>Ward identity</em> expresses the invariance or equivariance of <a class='existingWikiWord' href='/nlab/show/correlator'>correlation functions</a> under some given <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetry</a>.</p>
 
-<p>For a <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a>, the <em>classical Ward identity</em> is an <a class='existingWikiWord' href='/nlab/show/shell'>on-shell</a> <a class='existingWikiWord' href='/nlab/show/equation'>equation</a> satisfied by classical <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> due to <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetries</a> of the <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a>. For quantum observables it is not automatic, but one may consider imposing it as a constraint on the choice of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>. As such it is called the <em>quantum Ward identity</em> (really a condition). It is closely related to the <a class='existingWikiWord' href='/nlab/show/Schwinger-Dyson+equation'>Schwinger-Dyson equation</a>.</p>
+<p>For a <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a>, the <em>classical Ward identity</em> is an <a class='existingWikiWord' href='/nlab/show/shell'>on-shell</a> <a class='existingWikiWord' href='/nlab/show/equation'>equation</a> satisfied by classical <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> due to <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetries</a> of the <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a>. For quantum observables it is not automatic, but one may consider imposing it as a constraint on the choice of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>. As such it is called the <em>quantum Ward identity</em> (really a condition). It is a generalization of the <a class='existingWikiWord' href='/nlab/show/Schwinger-Dyson+equation'>Schwinger-Dyson equation</a> to non-<a class='existingWikiWord' href='/nlab/show/free+field+theory'>free</a> field theory: It may be understood as expressing the <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> of the <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-differential</a> with quantum correction by the <a class='existingWikiWord' href='/nlab/show/BV-operator'>BV-operator</a> (<a href='#Rejzner11'>Rejzner 11, prop. 5.3.1</a>).</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -680,7 +680,7 @@ margin-left: 0em;
 
 <p>Named after <em><a class='existingWikiWord' href='/nlab/show/John+Ward'>John Clive Ward</a></em>.</p>
 
-<p>Discussion in the rigorous context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
+<p>Discussion in the rigorous context of <a class='existingWikiWord' href='/nlab/show/relativistic+quantum+field+theory'>relativistic</a> <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>/<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a> is in</p>
 
 <ul>
 <li id='DuetschBoas02'>
@@ -693,6 +693,10 @@ margin-left: 0em;
 
 <li>
 <p>Ferdinand Brennecke, <a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <em>Removal of violations of the Master Ward Identity</em>, in perturbative QFT, Rev.Math.Phys. 20 (2008) 119-172 (<a href='https://arxiv.org/abs/0705.3160'>arXiv:https://arxiv.org/abs/0705.3160</a>)</p>
+</li>
+
+<li id='Rejzner11'>
+<p><a class='existingWikiWord' href='/nlab/show/Katarzyna+Rejzner'>Katarzyna Rejzner</a>, section 5.3 of <em>Batalin-Vilkovisky formalism in locally covariant field theory</em> (<a href='https://arxiv.org/abs/1111.5130'>arXiv:1111.5130</a>)</p>
 </li>
 
 <li id='Duetsch18'>
@@ -719,14 +723,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  7, 2018 13:59:44 
+  Revised on January  7, 2018 14:49:55 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ward+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ward+identity/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Ward+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ward+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ward+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ward+identity/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Ward+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ward+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
