--- a/pages/18481.html
+++ b/pages/18481.html
@@ -311,13 +311,13 @@ margin-left: 0em;
     <h1 id='reflexive_sets'>Reflexive sets</h1>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/material+set+theory'>material set theory</a>, a <strong>reflexive set</strong> is a set that belongs to itself:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_97e8b7fcbbe538d6a5d3c3a3005b150b17c2218d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∈</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> X \in \{X\} .</annotation></semantics></math></div>
-<p>Equivalently, <math class='maruku-mathml' display='inline' id='mathml_97e8b7fcbbe538d6a5d3c3a3005b150b17c2218d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is reflexive iff it equals its <a class='existingWikiWord' href='/nlab/show/successor'>successor</a> <math class='maruku-mathml' display='inline' id='mathml_97e8b7fcbbe538d6a5d3c3a3005b150b17c2218d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∪</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>X \cup \{X\}</annotation></semantics></math>. Compare <a class='existingWikiWord' href='/nlab/show/transitive+set'>transitive sets</a>.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bbaceed8e717da4cc8af1840492a6d3b6af95bbc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∈</mo><mi>X</mi><mo>.</mo></mrow><annotation encoding='application/x-tex'> X \in X .</annotation></semantics></math></div>
+<p>Equivalently, <math class='maruku-mathml' display='inline' id='mathml_bbaceed8e717da4cc8af1840492a6d3b6af95bbc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is reflexive iff it equals its <a class='existingWikiWord' href='/nlab/show/successor'>successor</a> <math class='maruku-mathml' display='inline' id='mathml_bbaceed8e717da4cc8af1840492a6d3b6af95bbc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>∪</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>X \cup \{X\}</annotation></semantics></math>. Compare <a class='existingWikiWord' href='/nlab/show/transitive+set'>transitive sets</a>.</p>
 
 <p>By the <a class='existingWikiWord' href='/nlab/show/axiom+of+foundation'>axiom of foundation</a>, there are no reflexive sets. In <span class='newWikiWord'>ill-founded set<a href='/nlab/new/ill-founded+set'>?</a></span> theory, however, there may be many reflexive sets.</p>
 
 <p>A <strong>Quine atom</strong> is a minimally reflexive set:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_97e8b7fcbbe538d6a5d3c3a3005b150b17c2218d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>=</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> X = \{X\} .</annotation></semantics></math></div>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bbaceed8e717da4cc8af1840492a6d3b6af95bbc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>=</mo><mo stretchy='false'>{</mo><mi>X</mi><mo stretchy='false'>}</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'> X = \{X\} .</annotation></semantics></math></div>
 <p>In <a class='existingWikiWord' href='/nlab/show/Peter+Aczel'>Peter Aczel</a>&#39;s ill-founded set theory, there is a unique Quine atom. On the other hand, by exempting Quine atoms (and only Quine atoms) from the axiom of foundation, one obtains a theory of pure sets equivalent to well-founded material sets with <a class='existingWikiWord' href='/nlab/show/urelement'>urelements</a>.</p>
 
 <p>
@@ -326,14 +326,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 21, 2017 17:53:21 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (64.89.52.24)
+  Revised on January  7, 2018 20:54:19 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (46.191.223.54)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/reflexive+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflexive+set/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/reflexive+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflexive+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/reflexive+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflexive+set/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/reflexive+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflexive+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
